Добавление функции редактирования монет в автомате, а так же блокирования монет. Рефакторинг кода

--- a/Views/AdminPage/Create.cshtml
+++ b/Views/AdminPage/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model SodaSeller.Models.SodaProducts
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Создание позиции";
 }
 
 <h1>Создание новой позиции</h1>
@@ -40,7 +40,7 @@
 </div>
 
 <div>
-    <a class="btn btn-outline-dark" asp-action="Index">Обратно</a>
+    <a class="btn btn-outline-dark" asp-action="Index">Вернуться</a>
 </div>
 
 @section Scripts {
