--- a/Views/AdminPage/Edit.cshtml
+++ b/Views/AdminPage/Edit.cshtml
@@ -1,10 +1,10 @@
 ﻿@model SodaSeller.Models.SodaProducts
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Редактирование";
 }
 
-<h1>Изменение</h1>
+<h1>Редактирование</h1>
 
 <h4>SodaProducts</h4>
 <hr />
